Updated content for new company name.

--- a/docs/develop/node/node-crash-course/advancedstreams/index-advancedstreams.mdx
+++ b/docs/develop/node/node-crash-course/advancedstreams/index-advancedstreams.mdx
@@ -130,7 +130,7 @@ If you're using redis-cli rather than RedisInsight, you can see the same informa
 
 ## External Resources
 
-* [RU202 Redis Streams](https://university.redislabs.com/courses/ru202/), a free online course at Redis University.
+* [RU202 Redis Streams](https://university.redis.com/courses/ru202/), a free online course at Redis University.
 * [Introduction to Redis Streams](https://redis.io/topics/streams-intro) at redis.io.
 * [XGROUP documentation](https://redis.io/commands/xgroup) at redis.io.
 * [XREADGROUP documentation](https://redis.io/commands/xreadgroup) at redis.io.
