--- a/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
+++ b/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
@@ -136,7 +136,7 @@ Now when you refresh `http://localhost:8081/checkins/latest` in your browser, th
 
 ## External Resources
 
-* [RU202, Redis Streams](https://university.redislabs.com/courses/ru202/) at Redis University provides a deep dive into Redis Streams.
+* [RU202, Redis Streams](https://university.redis.com/courses/ru202/) at Redis University provides a deep dive into Redis Streams.
 * [Introduction to Redis Streams](https://redis.io/topics/streams-intro) at redis.io.
 
 In this video, Justin introduces Redis Streams with an example application that's very similar to the one we're building in this course:
