--- a/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
+++ b/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
@@ -15,6 +15,6 @@ Thanks for taking the time to complete this course.  We hope that you found it u
 
 Don't forget that the application [source code is available on GitHub](https://github.com/redislabs-training/node-js-crash-course/) for you to browse and use in your own projects.
 
-Stay in touch! We'd love to hear from you and see what you build with Redis.  Why not [join us on Discord](https://discord.gg/redis) and [subscribe to our YouTube channel](https://youtube.com/redislabs) where we publish new videos regularly.
+Stay in touch! We'd love to hear from you and see what you build with Redis.  Why not [join us on Discord](https://discord.gg/redis) and [subscribe to our YouTube channel](https://youtube.com/redisinc) where we publish new videos regularly.
 
-Finally, if you'd like to continue your learning journey, check out [Redis University](https://university.redislabs.com) for free, self-paced online courses.
+Finally, if you'd like to continue your learning journey, check out [Redis University](https://university.redis.com) for free, self-paced online courses.
