--- a/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
+++ b/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
@@ -17,7 +17,7 @@ Modules are loaded into the Redis server at startup by modifying the redis.conf 
 
 ## Where to Find Modules?
 
-The redis.io website has a [catalog of available modules](https://redis.io/modules).  Redis Labs has developed a number of these that extend Redis in different ways, and we'll use some of them in our sample application.
+The redis.io website has a [catalog of available modules](https://redis.io/modules).  Redis has developed a number of these that extend Redis in different ways, and we'll use some of them in our sample application.
 
 One way to get started with Redis modules is to use the [redismod Docker container](https://registry.hub.docker.com/r/redislabs/redismod) from Docker Hub.  This is the container that you're using on this course, and it includes all of the following modules:
 
@@ -29,7 +29,7 @@ One way to get started with Redis modules is to use the [redismod Docker contain
 * [RedisBloom](https://redisbloom.io/) - adds native Bloom and Cuckoo filter data types to Redis, plus other probabilistic data structures.
 * [RedisGears](https://redisgears.io/) - a dynamic execution framework for running code on the Redis server.
 
-Redis Labs offers Redis Enterprise Cloud, a fully managed service for running and scaling Redis and Redis Labs modules.  [Sign up for Redis Enterprise Cloud](https://redislabs.com/try-free/) and use the full-featured free tier to try it out!
+Redis offers Redis Enterprise Cloud, a fully managed service for running and scaling Redis and Redis modules.  [Sign up for Redis Enterprise Cloud](https://redis.com/try-free/) and use the full-featured free tier to try it out!
 
 ## Using Modules in our Application
 
@@ -48,6 +48,6 @@ In the next section, we'll get to grips with RedisJSON...
 
 Check out these links to learn more about which modules are available for Redis and how to use the modules API to create you own:
 
-* [Modules in Redis Enterprise](https://redislabs.com/redis-enterprise/modules/)
+* [Modules in Redis Enterprise](https://redis.com/redis-enterprise/modules/)
 * [List of Redis Modules at redis.io](https://redis.io/modules)
 * [Introduction to the Redis Modules API at redis.io](https://redis.io/topics/modules-intro)
