--- a/docs/develop/node/node-crash-course/redisandnodejs/index-redisandnodejs.mdx
+++ b/docs/develop/node/node-crash-course/redisandnodejs/index-redisandnodejs.mdx
@@ -60,7 +60,7 @@ The following additional resources can help you understand how to access Redis f
 
 * [ioredis](https://github.com/luin/ioredis): Home page for the ioredis client.
 * [node_redis](https://redis.js.org/): Home page for the node_redis client.
-* [RU102JS, Redis for JavaScript Developers](https://university.redislabs.com/courses/ru102js/): A free online course at Redis University that provides a deep dive into Redis for Node.js applications. You can expect to learn how to make connections to Redis, store and retrieve data, and leverage essential Redis features such as sorted sets and streams.
+* [RU102JS, Redis for JavaScript Developers](https://university.redis.com/courses/ru102js/): A free online course at Redis University that provides a deep dive into Redis for Node.js applications. You can expect to learn how to make connections to Redis, store and retrieve data, and leverage essential Redis features such as sorted sets and streams.
 * [Redis clients by programming language](https://redis.io/clients): A large list of Redis clients at redis.io.
 
 In this video, I take a look at how to get up and running with the ioredis client:
