--- a/docs/develop/node/node-crash-course/sessionstorage/index-sessionstorage.mdx
+++ b/docs/develop/node/node-crash-course/sessionstorage/index-sessionstorage.mdx
@@ -129,4 +129,4 @@ Next, we'll move on to look at how to scale up our checkin processing to cope wi
 ## External Resources
 
 * [connect-redis session store package on npm](https://www.npmjs.com/package/connect-redis)
-* [Cache vs Session Store](https://redislabs.com/blog/cache-vs-session-store/) - a blog article from Redis Labs
+* [Cache vs Session Store](https://redis.com/blog/cache-vs-session-store/) - a blog article from Redis
