--- a/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
+++ b/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 <iframe width="560" height="315" src="https://www.youtube.com/embed/1t7uqAwG-DY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-Welcome to the Node.js Redis Crash Course.  I'm [Simon Prickett](https://twitter.com/simon_prickett), Senior Curriculum Engineer at Redis Labs.  
+Welcome to the Node.js Redis Crash Course.  I'm [Simon Prickett](https://twitter.com/simon_prickett), Developer Advocacy Manager at Redis.  
 
 In this course, you'll learn about using Redis with Node.js through a blend of video and text-based training.  You can also get hands-on with some optional workshop exercises where you'll add new functionality to an existing Node.js application.  
 
