--- a/docs/develop/java/spring/index-spring.mdx
+++ b/docs/develop/java/spring/index-spring.mdx
@@ -1,6 +1,21 @@
 ---
 id: index-spring
-title: Spring and Redis
-sidebar_label: Spring
+title: Spring
+sidebar_label: Overview
 slug: /develop/java/spring/
 ---
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import useBaseUrl from '@docusaurus/useBaseUrl';
+import RedisCard from '@site/src/theme/RedisCard';
+
+#### Data-Driven Applications with Spring Boot and Redis
+
+Spring Boot is the most powerful and popular way to easily create stand-alone,
+production-grade Spring based Applications that you can "just run".
+
+Paired with Redis, Spring and Spring Boot give unrivaled versatility. For a quick,
+tour of some of the cool things you can do with Spring and Redis checkout the session by
+Josh Long and Brian Sam-Bodden at RedisConf 2021:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Yq8Cc7eOgF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
