--- a/docs/howtos/shoppingcart/index-shoppingcart.mdx
+++ b/docs/howtos/shoppingcart/index-shoppingcart.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-shoppingcart
-title: How to build a Shopping cart app using NodeJS and RedisJSON
-sidebar_label: How to build a Shopping cart app using NodeJS and RedisJSON
+title: How to build a Shopping cart app using NodeJS and Redis
+sidebar_label: How to build a Shopping cart app using NodeJS and Redis
 slug: /howtos/shoppingcart
 ---
 import Tabs from '@theme/Tabs';
