--- a/docs/howtos/redisgears/index-redisgears.mdx
+++ b/docs/howtos/redisgears/index-redisgears.mdx
@@ -7,7 +7,7 @@ slug: /howtos/redisgears
 
 
 
-RedisGears is an engine for data processing in Redis. RedisGears supports batch and event-driven processing for Redis data. To use RedisGears, you write functions that describe how your data should be processed. You then submit this code to your Redis deployment for remote execution.
+[RedisGears](https://redis.com/modules/redis-gears/) is an engine for data processing in Redis. RedisGears supports batch and event-driven processing for Redis data. To use RedisGears, you write functions that describe how your data should be processed. You then submit this code to your Redis deployment for remote execution.
 
 RedisGears is implemented by a Redis module. To use RedisGears, you’ll need to make sure that your Redis deployment has the module installed.
 
@@ -68,3 +68,4 @@ The results here show the number of occurences of each word in all of our string
 
 - [How to build a Fraud Detection System using RedisGears and RedisBloom](/howtos/frauddetection)
 - [Writing Your Serverless function using RedisGears Browser Tool](/explore/redisinsight/redisgears)
+- [RedisGears Module](https://redis.com/modules/redis-gears/)
