--- a/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
+++ b/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
@@ -7,7 +7,7 @@ slug: /howtos/redisgraph/explore-python-code
 
 Pycograph is an open source tool that creates a RedisGraph model of your Python code. The tool lets you to explore your Python code with graph queries. With Pycograph, you can query the python code with Cypher. Additionally, it is possible to visualize the graph model using RedisInsight.
 
-The project is hosted under https://pycograph.com/ and package is available in [PyPI repository](https://pypi.org/project/pycograph/). It was introduced for the first time by [Reka Horvath](https://pypi.org/user/reka/) during RedisConf 2021.
+The project is hosted over https://pycograph.com/ and package is available in [PyPI repository](https://pypi.org/project/pycograph/). It was introduced for the first time by [Reka Horvath](https://pypi.org/user/reka/) during RedisConf 2021.
 
 <div class="text--center">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/pE3cg6jK2Zg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
