--- a/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
+++ b/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
@@ -1,11 +1,11 @@
 ---
 id: index-explorepythoncode
-title: Explore Python Code using RedisGraph
-sidebar_label: Explore Python Code using RedisGraph
+title: Explore Python Codebase using RedisGraph
+sidebar_label: Explore Python Codebase using RedisGraph
 slug: /howtos/redisgraph/explore-python-code
 ---
 
-Pycograph is an open source tool that creates a RedisGraph model of your Python code. The tool lets you to explore your Python code with graph queries. With Pycograph, you can query the python code with Cypher. Additionally, it is possible to visualize the graph model using RedisInsight.
+Pycograph is an open source tool that creates a RedisGraph model of your Python code. The tool lets you to explore your Python codebase with graph queries. With Pycograph, you can query the python code with Cypher. Additionally, it is possible to visualize the graph model using RedisInsight.
 
 The project is hosted over https://pycograph.com/ and package is available in [PyPI repository](https://pypi.org/project/pycograph/). It was introduced for the first time by [Reka Horvath](https://pypi.org/user/reka/) during RedisConf 2021.
 
