--- a/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
+++ b/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
@@ -105,5 +105,5 @@ Functions called by the Docker Compose top level commands up and run
 
 ### References:
 
-- [Pycograph Source Code](https://pycograph.com/examples/)
+- [Pycograph Project](https://pycograph.com/)
 - [Docker Compose Source Code](https://github.com/docker/compose)
