--- a/docs/howtos/antipatterns/index-antipatterns.mdx
+++ b/docs/howtos/antipatterns/index-antipatterns.mdx
@@ -7,9 +7,9 @@ slug: /howtos/antipatterns/
 
 ![antipattern](antipattern.png)
 
-"Antipatterns" basically refers to those practices and solutions that might seem to be a good fit initially but when it comes to implementation phase, it makes your code much more complex. Redis defaults are not the best for everyone. It is important to spend time and figure out what works best for you. Redis is a favorite data store of millions of developers due to its speed and performance, however it is important to make sure that it is being used properly, otherwise, problems can and will occur.
+Developers don’t just use Redis, they love it. [Stack Overflow’s annual Developer Survey 2021](https://insights.stackoverflow.com/survey/2021#technology-most-loved-dreaded-and-wanted) has ranked Redis as the Most Loved Database platform for the fifth years running! But it is equally important to understand that Redis defaults are not the best for everyone. Millions of developers uses Redis due to its speed and performance, however it is important to make sure that it is being used properly, otherwise, problems can and will occur.
 
-Let us look at the top 12 Redis anti-patterns to avoid:
+"Antipatterns" basically refers to those practices and solutions that might seem to be a good fit initially but when it comes to implementation phase, it makes your code much more complex. Let us look at the top 12 Redis anti-patterns to avoid:
 
 
 ### 1. Large databases running on a single shard/Redis instance
