--- a/docs/howtos/redisjson/using-go/index-usinggo.mdx
+++ b/docs/howtos/redisjson/using-go/index-usinggo.mdx
@@ -5,7 +5,7 @@ sidebar_label: RedisJSON with Go
 slug: /howtos/redisjson/using-go
 ---
 
-[Go-ReJSON](https://github.com/nitishm/go-rejson) is a Go client for ReJSON Redis Module. It is a Golang client that support multilple Redis clients such as the print-like Redis-api client [redigo](/develop/golang/) and the type-safe Redis client [go-redis](/develop/golang/).
+[Go-ReJSON](https://github.com/nitishm/go-rejson) is a Go client for ReJSON Redis Module. It is a Golang client that support multiple Redis clients such as the print-like Redis-api client [redigo](/develop/golang/) and the type-safe Redis client [go-redis](/develop/golang/).
 
 Follow the below steps to get started with RedisJSON using Go client.
 
