--- a/docs/howtos/redisjson/using-python/index-usingpython.mdx
+++ b/docs/howtos/redisjson/using-python/index-usingpython.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingpython
-title: RedisJSON and Python 
+title: How to cache JSON data in Redis using Python 
 sidebar_label: RedisJSON and Python
 slug: /howtos/redisjson/using-python
 ---
