--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingnodejs
-title: RedisJSON and NodeJS
+title: How to cache JSON data in Redis using NodeJS
 sidebar_label: RedisJSON and NodeJS
 slug: /howtos/redisjson/using-nodejs
 ---
