--- a/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
+++ b/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingruby
-title: RedisJSON and Ruby
+title: How to cache JSON data in Redis using Ruby
 sidebar_label: RedisJSON and Ruby
 slug: /howtos/redisjson/using-ruby
 ---
