--- a/docs/howtos/redisjson/using-java/index-usingjava.mdx
+++ b/docs/howtos/redisjson/using-java/index-usingjava.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingjava
-title: Importing JSON data into Redis using Java
+title: How to cache JSON data in Redis using Java
 sidebar_label: RedisJSON with Java
 slug: /howtos/redisjson/using-java
 ---
