--- a/docs/howtos/redisjson/using-go/index-usinggo.mdx
+++ b/docs/howtos/redisjson/using-go/index-usinggo.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usinggo
-title: How to cache JSON data in Redis using Go
+title: How to cache JSON data in Redis with Go
 sidebar_label: RedisJSON with Go
 slug: /howtos/redisjson/using-go
 ---
