--- a/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
+++ b/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
@@ -74,6 +74,6 @@ You can verify what's happening in the background by running the monitor command
 
 ### References
 
-- [Rate Limiting app in Ruby and Redis](/howtos/ratelimiting)
+- [Rate Limiting app in Ruby and Redis](/howtos/ratelimiting/)
 - [Ruby and Redis](/develop/ruby/)
 
