--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -26,7 +26,7 @@ The following links provides you with the available options to get started with 
  <div class="col">
     <RedisCard
         title="RedisJSON and Python"
-        description="How to import JSON document in Redis using Python"
+        description="How to cache JSON data in Redis using Python"
         page="/howtos/redisjson/using-python"
         />
  </div>
@@ -34,7 +34,7 @@ The following links provides you with the available options to get started with 
  <div class="col">
     <RedisCard
         title="RedisJSON and NodeJS"
-        description="How to import JSON document in Redis using NodeJS"
+        description="How to cache JSON data in Redis using NodeJS"
         page="/howtos/redisjson/using-nodejs"
         />
  </div>
@@ -46,7 +46,7 @@ The following links provides you with the available options to get started with 
  <div class="col">
     <RedisCard
         title="RedisJSON and Ruby"
-        description="How to import JSON document into Redis using Ruby"
+        description="How to cache JSON data in Redis using Ruby"
         page="/howtos/redisjson/using-ruby"
         />
  </div>
@@ -54,7 +54,7 @@ The following links provides you with the available options to get started with 
  <div class="col">
     <RedisCard
         title="RedisJSON and Go"
-        description="How to import JSON document into Redis using Go"
+        description="How to cache JSON data in Redis using Go"
         page="/howtos/redisjson/using-go"
         />
  </div>
@@ -63,7 +63,7 @@ The following links provides you with the available options to get started with 
  <div class="col">
     <RedisCard
         title="RedisJSON and Java"
-        description="How to import JSON document into Redis using Java"
+        description="How to cache JSON data in Redis using Java"
         page="/howtos/redisjson/using-java"
         />
  </div>
