--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -136,10 +136,10 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
   </TabItem>
 </Tabs>
 
-### Redis Marketplace
+### Redis LaunchPad
 
-Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+Redis LaunchPad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redislabs.com)
 
 <div class="row text--center">
 
@@ -149,9 +149,9 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 #### Movie Database app in Java
 
 
-![marketplace](images/moviedatabasejava.png)
+![launchpad](images/moviedatabasejava.png)
 
-[Movie Database app in Java](http://marketplace.redislabs.com/?id=project%3Ademo-movie-app-redisearch-java) based on RediSearch capabilities
+[Movie Database app in Java](http://launchpad.redislabs.com/?id=project%3Ademo-movie-app-redisearch-java) based on RediSearch capabilities
 </div>
 </div>
 
@@ -160,9 +160,9 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### Leaderboard app in Java
 
-![marketplace](images/basicleaderboardjava.png)
+![launchpad](images/basicleaderboardjava.png)
 
-[How to implement leaderboard app](http://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-java) using Redis & Java(Spring)
+[How to implement leaderboard app](http://launchpad.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-java) using Redis & Java(Spring)
 </div>
 </div>
 </div>
