--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -136,9 +136,9 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
   </TabItem>
 </Tabs>
 
-### Redis LaunchPad
+### Redis Launchpad
 
-Redis LaunchPad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
 Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redislabs.com)
 
 <div class="row text--center">
