--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -203,10 +203,10 @@ By now, the Go application should successfully connect to the Redis instance and
 
 </Tabs>
 
-###  Redis Marketplace
+###  Redis Launchpad
 
-Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redislabs.com)
 
 <div class="row text--center">
 
@@ -216,9 +216,9 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 #### Rate-Limiting app in Go
 
 
-![marketplace](images/ratelimitinggo.png)
+![launchpad](images/ratelimitinggo.png)
 
-[Rate Limiting app](http://marketplace.redislabs.com/?id=project%3Abasic-redis-rate-limiting-demo-go-lang) built in Go
+[Rate Limiting app](http://launchpad.redislabs.com/?id=project%3Abasic-redis-rate-limiting-demo-go-lang) built in Go
 </div>
 </div>
 
@@ -227,9 +227,9 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### Leaderboard app in Go
 
-![marketplace](images/leaderboardgo.png)
+![launchpad](images/leaderboardgo.png)
 
-[How to implement leaderboard app](https://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-python) in Go
+[How to implement leaderboard app](https://launchpad.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-python) in Go
 </div>
 </div>
 </div>
