--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -139,7 +139,7 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
 ### Redis Launchpad
 
 Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redislabs.com)
+Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redis.com)
 
 <div class="row text--center">
 
@@ -151,7 +151,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 ![launchpad](images/moviedatabasejava.png)
 
-[Movie Database app in Java](http://launchpad.redislabs.com/?id=project%3Ademo-movie-app-redisearch-java) based on RediSearch capabilities
+[Movie Database app in Java](http://launchpad.redis.com/?id=project%3Ademo-movie-app-redisearch-java) based on RediSearch capabilities
 </div>
 </div>
 
@@ -162,7 +162,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 ![launchpad](images/basicleaderboardjava.png)
 
-[How to implement leaderboard app](http://launchpad.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-java) using Redis & Java(Spring)
+[How to implement leaderboard app](http://launchpad.redis.com/?id=project%3Abasic-redis-leaderboard-demo-java) using Redis & Java(Spring)
 </div>
 </div>
 </div>
